<resources>
    <string name="app_name">Tikets</string>
    <string name="text_splash">Wisata Jadi Lebih Asyik!</string>
    <string name="text_new_account">Create New Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="info_lable">Please fill up the forms below\n for informations</string>
    <string name="register_one">CONTINUE</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="info2_lable">Let the world knows yourself \nmore better and ever</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="sukses_label">Selamat datang pada TiketSaya \ndan nikmati wisatamu</string>
    <string name="explore_now">EXPLORE NOW</string>
    <string name="mydashboard">My Dashboard</string>
    <string name="main_menus">Main Menus</string>
    <string name="title_detail">Menara Pisa</string>
    <string name="desc">The leaning of the Tower of Pisa  \ncomes into the story in 1173, when  \nconstruction began.</string>
    <string name="buy_tiket">Buy Tiket</string>
    <string name="announ">Anak yang berumur lebih dari 3 tahun \nwajib membeli tiket untuk masuk \nkedalam landmark</string>
    <string name="pay_now">CHECKUOT</string>
    <string name="sukses_tiket">Anda berhasil membeli tiket  \ndan selamat berlibur</string>
    <string name="view_tiket">VIEW TIKETS</string>
    <string name="view_dashboard">MY DASHBOARD</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="pembayaran">LANJUT BAYAR</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="btn_batal">BATALKAN</string>
    <string name="date">Date</string>
    <string name="noreg">NO. REGISTRASI</string>
    <string name="time">TIME</string>
    <string name="biaya_penanganan">Biaya Penanganan :</string>
    <string name="tiket_details">Tiket Details</string>
    <string name="title_pembayaran">Pembayaran</string>
    <string name="refund_now">LANJUT BAYAR</string>
    <string name="edit_profile_desc">We highly suggest you to \nuse the correct informations</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="title_bay_tiket">Beli Tiket</string>
    <string name="lable_info_bay_tiket">Informasi</string>
    <string name="lable_pricing_bay_tiket">Harga</string>
    <string name="desc_bay_ticket">Beli tiket sebelum berwisata</string>
    <string name="desc_bay_ticket_price">Saldo Anda adalah :</string>
    <string name="total_biaya_tiket">Total Biaya Tiket :</string>
</resources>