<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".MyTicketDetailAct">

    <View
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@drawable/bg_gradient_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/tiket_details"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_ticket_buy" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/xnama_wisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/xlokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textColor="@color/GrayPrimary"
                    android:textSize="@dimen/desc" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#EDEDED"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/lable"
            android:textColor="@color/BlackPrimary"
            android:fontFamily="@font/mregular"
            android:text="@string/date"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/xdate_wisata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/desc"
            android:textColor="@color/GrayPrimary"
            android:fontFamily="@font/mlight"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/lable"
            android:textColor="@color/BlackPrimary"
            android:fontFamily="@font/mregular"
            android:text="@string/time"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/xtime_wisata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/desc"
            android:textColor="@color/GrayPrimary"
            android:fontFamily="@font/mlight"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/lable"
            android:textColor="@color/BlackPrimary"
            android:fontFamily="@font/mregular"
            android:text="@string/information"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/xketentuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/desc"
            android:textColor="@color/GrayPrimary"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:layout_width="224dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back"
                style="@style/btn_white_secondary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_continue"
                style="@style/btn_green_primary"
                android:layout_marginLeft="16dp"
                android:text="@string/refund_now"/>

        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>